Added dashboard content: top sellers

--- a/views/dashboard/dashboard.ejs
+++ b/views/dashboard/dashboard.ejs
@@ -2,83 +2,44 @@
 <div class="container-fluid">
     <!-- Content Row -->
 <div class="row mb-2">
-    <div class="col-lg-12">
+    <div class="col-lg-5 padding-fix">
         <div class="card">
             <div class="card-header py-3 header-bg">
-                <h6 class="m-0 font-weight-bold text-white">Dashboard</h6>
+                <h6 class="m-0 font-weight-bold text-white">Best Sellers</h6>
             </div>
             <div class="card-body">
-                <div class="row">
-                    <div class="col-md-8">
-                        <input id="accessname" name="accessname" type="text" class="form-control" placeholder="Enter Access Name" aria-label="accessname" aria-describedby="basic-addon1">
-                    </div>
-                    <div class="col-md-4 text-center mt-1">
-                        <button id="addBtn" name="addBtn" class="d-sm-inline-block btn btn-sm btn-outline-primary shadow-sm w-50">
-                            <i class="fa fa-plus" aria-hidden="true"></i>
-                            Add
-                        </button>
-                    </div>
+                <div style="width: 100%; margin: auto;">
+                    <canvas id="myChart"></canvas>
                 </div>
+            </div>      
+        </div>
+    </div>
+    <div class="col-lg-7">
+        <div class="card">
+            <div class="card-header py-3 header-bg">
+                <h6 class="m-0 font-weight-bold text-white">Current Sales</h6>
+            </div>
+            <div class="card-body">
+               
             </div>      
         </div>
     </div>
 </div>
 
     <!-- DataTales Example -->
-<div class="card shadow mb-4 table-size">
+<div class="card shadow mb-2">
     <div class="card-header py-3 header-bg">
-        <h6 class="m-0 font-weight-bold table-title text-white">DataTables Example</h6>
+        <h6 class="m-0 font-weight-bold table-title text-white">Current Year Sales</h6>
     </div>
     <div class="card-body">
-        <div class="table-responsive">
-            <table class="table table-bordered" id="position-dataTable" width="100%" cellspacing="10">
-                <thead>
-                    <tr>
-                        <th class = "col-1 text-start">Position Code</th>
-                        <th class = "col-3 text-center">Position Name</th>
-                        <th class = "col-3 text-center">Created by</th>
-                        <th class = "col-2 text-center">Created date</th>
-                        <th class = "col-1 text-center">Status</th>
-                        <th class = "col-2 text-end">Action</th>               
-                    </tr>
-                </thead>
-                    
-                <tbody>
-                    <tr>
-                        <td class="td-hover-color">1000</td>
-                        <td class="td-hover-color">IT service provider</td>
-                        <td class="td-hover-color">Joseph Orencio</td>                                        
-                        <td class="td-hover-color">2011/04/25</td>
-                        <td class="td-hover-color">Active</td>      
-                        <td class="text-center">
-                            <button type="button" class="btn btn-outline-primary button-margin">Inactive</button>
-                            <button type="button" class="btn btn-outline-primary">Edit</button>  
-                        </td>                              
-                    </tr>
-                    <tr>
-                        <td class="td-hover-color">1001</td>
-                        <td class="td-hover-color">IT service provider</td>
-                        <td class="td-hover-color">Joseph Orencio</td>                                        
-                        <td class="td-hover-color">2011/04/25</td>
-                        <td class="td-hover-color">Active</td>
-                        <td class="text-center">
-                            <button type="button" class="btn btn-outline-primary button-margin">Inactive</button>
-                            <button type="button" class="btn btn-outline-primary">Edit</button>  
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="td-hover-color">1002</td>
-                        <td class="td-hover-color">IT service provider</td>
-                        <td class="td-hover-color">Joseph Orencio</td>                                        
-                        <td class="td-hover-color">2011/04/25</td>
-                        <td class="td-hover-color">Active</td>
-                        <td class="text-center">
-                            <button type="button" class="btn btn-outline-primary button-margin">Inactive</button>
-                            <button type="button" class="btn btn-outline-primary">Edit</button>  
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+        
+    </div>
+</div>
+<div class="card shadow mb-2">
+    <div class="card-header py-3 header-bg">
+        <h6 class="m-0 font-weight-bold table-title text-white">Shift Reports</h6>
+    </div>
+    <div class="card-body">
+        
     </div>
 </div>
