--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -52,9 +52,14 @@
 <!-- SWAL-->
 <script src="/javascripts/sweetalert.min.js"></script>
 
+<!-- DATE RANGE PICKER -->
 <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+
+<!--CHART-->
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <script>
     function success(title, text) {
