Fix display for chart

--- a/views/dashboard/dashboard.ejs
+++ b/views/dashboard/dashboard.ejs
@@ -2,19 +2,19 @@
 <div class="container-fluid">
     <!-- Content Row -->
 <div class="row mb-2">
-    <div class="col-lg-5 padding-fix">
+    <div class="col-lg-7 padding-fix">
         <div class="card">
             <div class="card-header py-3 header-bg">
                 <h6 class="m-0 font-weight-bold text-white">Best Sellers</h6>
             </div>
             <div class="card-body">
-                <div style="width: 100%; margin: auto;">
-                    <canvas id="myChart"></canvas>
+                <div style="width: 100%; margin: auto; height: 300px;">
+                    <canvas class="chartbox" id="myChart"></canvas>
                 </div>
             </div>      
         </div>
     </div>
-    <div class="col-lg-7">
+    <div class="col-lg-5">
         <div class="card">
             <div class="card-header py-3 header-bg">
                 <h6 class="m-0 font-weight-bold text-white">Current Sales</h6>
