--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -27,6 +27,12 @@
   
 }
 
+.chartbox{
+  border-radius: 10px;
+  padding: 15px;
+  border: solid 3px var(--clr-sb-bg);
+}
+
 .padding-fix{
   padding-right: 0 !important;
 }
