--- a/views/dashboard/dashboard.ejs
+++ b/views/dashboard/dashboard.ejs
@@ -1,20 +1,41 @@
 <!-- Begin PCreated by Content -->
 <div class="container-fluid">
     <!-- Content Row -->
-<div class="row mb-2">
-    <div class="col-lg-7 padding-fix">
+<div class="row">
+    <div class="col-lg-7 padding-fix mb-2">
         <div class="card">
             <div class="card-header py-3 header-bg">
                 <h6 class="m-0 font-weight-bold text-white">Best Sellers</h6>
             </div>
             <div class="card-body">
-                <div style="width: 100%; margin: auto; height: 300px;">
+                <div style="width: 100%; margin: auto; height: 300px;" id="chartContainer">
                     <canvas class="chartbox" id="myChart"></canvas>
                 </div>
+                <div class="text-center w-100" id="noDataMessage" style="display: none;">
+                    <p >No Current Sales Today.</p>
+                </div>
             </div>      
+            <div class="row mx-1 mb-4">
+
+                <div class="col">
+                    <button id="daily" name="daily" class="btn btn-sm btn-outline-inventory shadow-sm w-100">
+                        Current Day
+                    </button> 
+                </div>
+                <div class="col">
+                    <button id="monthly" name="monthly" class="btn btn-sm btn-outline-inventory shadow-sm w-100">
+                        Current Month
+                    </button> 
+                </div>
+                <div class="col">
+                    <button id="yearly" name="yearly" class="btn btn-sm btn-outline-inventory shadow-sm w-100">
+                        Current Year
+                    </button> 
+                </div>
+            </div>
         </div>
     </div>
-    <div class="col-lg-5">
+    <div class="col-lg-5 mb-2">
         <div class="card">
             <div class="card-header py-3 header-bg">
                 <h6 class="m-0 font-weight-bold text-white">Current Sales</h6>
