--- a/views/dashboard/dashboard.ejs
+++ b/views/dashboard/dashboard.ejs
@@ -5,7 +5,7 @@
     <div class="col-lg-7 padding-fix mb-2">
         <div class="card">
             <div class="card-header py-3 header-bg">
-                <h6 class="m-0 font-weight-bold text-white">Best Sellers</h6>
+                <h6 class="m-0 font-weight-bold text-white">Best Sellers: <span id="bestSellersFilterLabel">Daily</span></h6>
             </div>
             <div class="card-body">
                 <div style="width: 100%; margin: auto; height: 300px;" id="chartContainer">
@@ -36,12 +36,35 @@
         </div>
     </div>
     <div class="col-lg-5 mb-2">
-        <div class="card">
+        <div class="card dashboard-size">
             <div class="card-header py-3 header-bg">
-                <h6 class="m-0 font-weight-bold text-white">Current Sales</h6>
+                <h6 class="header m-0 font-weight-bold text-white"><span id="currentFilterLabel">Daily</span> Sales</h6>
             </div>
             <div class="card-body">
-               
+                <div class="input-group mb-2">
+                    <input type="text" class="form-control bg-light small"
+                        placeholder="Search for..." aria-label="Search"
+                        aria-describedby="basic-addon2" id="search-input">
+                    <div class="input-group-append">
+                        <button class="btn sis-btn-color" type="button" id="search-button">
+                            <i class="fas fa-search fa-sm"></i>
+                        </button>
+                    </div>
+                </div>
+                <div class="table-responsive scrollable-dashboard-table-container">
+                    <table class="table table-bordered custom-mobile-table" id="sales-dataTable" width="100%" cellspacing="10">
+                        <thead class="table-header">
+                            <tr>
+                                <th class = "col-4">Name</th>
+                                <th class = "col-1">Total Sales</th>
+                                <th class = "col-1">Total Price</th>               
+                            </tr>
+                        </thead>
+                            
+                        <tbody>
+                        </tbody>
+                    </table>
+                </div>
             </div>      
         </div>
     </div>
