Added yearly statistics display

--- a/views/dashboard/dashboard.ejs
+++ b/views/dashboard/dashboard.ejs
@@ -75,8 +75,8 @@
     <div class="card-header py-3 header-bg">
         <h6 class="m-0 font-weight-bold table-title text-white">Current Year Sales</h6>
     </div>
-    <div class="card-body">
-        
+    <div class="card-body yearly-chart">
+        <canvas id="salesChart"></canvas>
     </div>
 </div>
 <div class="card shadow mb-2">
