--- a/views/dashboard/dashboardscripts.ejs
+++ b/views/dashboard/dashboardscripts.ejs
@@ -297,7 +297,11 @@
                         },
                         y: {
                             beginAtZero: true,
-                            
+                            ticks: {
+                                callback: function(value) {
+                                    return '₱' + value.toLocaleString(); 
+                                }
+                            }
                         }
                     }
                 }
