Added deletion of employee along with user based on id

--- a/views/branch/branchscripts.ejs
+++ b/views/branch/branchscripts.ejs
@@ -200,6 +200,12 @@
         })
 
         function populateBranchTable(data) {
+            const addBtn = $('#addBtn');
+            if (data.length === 1) {
+                addBtn.prop('disabled', true);
+            } else {
+                addBtn.prop('disabled', false);
+            }
             console.log(data);
             const tableBody = $('#branch-dataTable tbody');
             tableBody.empty();
@@ -393,6 +399,7 @@
         }
 
         $('#search-input').on('input', filterTableRows);
+
     
     })
     
