--- a/views/users/usersscripts.ejs
+++ b/views/users/usersscripts.ejs
@@ -92,28 +92,30 @@
             } else {
                 data.forEach(item => {
                     let action = '';
-                    if (item.status === 'ACTIVE') {
+                    if (item.status !== 'DELETED'){
+                        if (item.status === 'ACTIVE') {
                         action = `
-                            <button id="editBtn" class="btn btn-outline-inventory shadow-sm w-100" name="editBtn" data-toggle="modal" data-target="#accessModal">EDIT</button>
-                            <button id="inactiveBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="inactiveBtn">INACTIVE</button>`;
-                    } else if (item.status === 'INACTIVE') {
-                        action = `
-                            <button id="editBtn" class="btn btn-outline-inventory shadow-sm w-100" name="editBtn" data-toggle="modal" data-target="#accessModal">EDIT</button>
-                            <button id="activeBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="activeBtn">ACTIVE</button>`;
-                    }
-                    const tr = $('<tr>').append(
-                        $('<td>', { text: item.usercode, 'data-label': 'User Code', class: 'custom-mobile-align' }),
-                        $('<td>', { text: item.employeeid, 'data-label': 'Employee ID', class: 'custom-mobile-align' }),
-                        $('<td>', { text: item.accesstype, 'data-label': 'Access Type', class: 'custom-mobile-align' }),
-                        $('<td>', { text: item.positiontype, 'data-label': 'Position Type', class: 'custom-mobile-align' }),
-                        $('<td>', { text: item.username, 'data-label': 'Username', class: 'custom-mobile-align' }),
-                        $('<td>', { text: item.createdby, 'data-label': 'Created By', class: 'custom-mobile-align' }),
-                        $('<td>', { text: item.createddate, 'data-label': 'Created Date', class: 'custom-mobile-align' }),
-                        $('<td>', { text: item.status, 'data-label': 'Status', class: 'custom-mobile-align' }),
-                        $('<td>', { html: action, 'data-label': 'Action', class: '' })
-                    );
+                                <button id="editBtn" class="btn btn-outline-inventory shadow-sm w-100" name="editBtn" data-toggle="modal" data-target="#accessModal">EDIT</button>
+                                <button id="inactiveBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="inactiveBtn">INACTIVE</button>`;
+                        } else if (item.status === 'INACTIVE') {
+                            action = `
+                                <button id="editBtn" class="btn btn-outline-inventory shadow-sm w-100" name="editBtn" data-toggle="modal" data-target="#accessModal">EDIT</button>
+                                <button id="activeBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="activeBtn">ACTIVE</button>`;
+                        }
+                        const tr = $('<tr>').append(
+                            $('<td>', { text: item.usercode, 'data-label': 'User Code', class: 'custom-mobile-align' }),
+                            $('<td>', { text: item.employeeid, 'data-label': 'Employee ID', class: 'custom-mobile-align' }),
+                            $('<td>', { text: item.accesstype, 'data-label': 'Access Type', class: 'custom-mobile-align' }),
+                            $('<td>', { text: item.positiontype, 'data-label': 'Position Type', class: 'custom-mobile-align' }),
+                            $('<td>', { text: item.username, 'data-label': 'Username', class: 'custom-mobile-align' }),
+                            $('<td>', { text: item.createdby, 'data-label': 'Created By', class: 'custom-mobile-align' }),
+                            $('<td>', { text: item.createddate, 'data-label': 'Created Date', class: 'custom-mobile-align' }),
+                            $('<td>', { text: item.status, 'data-label': 'Status', class: 'custom-mobile-align' }),
+                            $('<td>', { html: action, 'data-label': 'Action', class: '' })
+                        );
 
-                    tableBody.append(tr);
+                        tableBody.append(tr);
+                        }
                 });
             }
         }
